Aggiunte sottosezioni del capitolo 3

--- a/Relazione/Documentazione Cross.tex
+++ b/Relazione/Documentazione Cross.tex
@@ -87,6 +87,13 @@ Il Server utilizza un \textbf{FixedThreadPool} per gestire i vari client conness
 
 \section{File Java}
 
+\subsection{Utils}
+
+\subsection{JsonAccessedData}
+
+\subsection{ClientClass}
+
+\subsection{ServerClass}
 
 \section{Primitive di Sincronizzazione}
 
