cambio di forma

--- a/Relazione/Documentazione Cross.tex
+++ b/Relazione/Documentazione Cross.tex
@@ -127,7 +127,7 @@ L'unica eccezione è \textbf{getPriceHistory} che richiede lo storico degli ordi
 
 \subsection{Utils}
 Questo package contiene le varie classi utilizzate per semplificare la manipolazione dei file Json, le eccezzioni create per gestire i parametri errati nella creazione dei comandi mediante factory ed una cache per il mantenimento in memoria degli ordini evasi durante l'esecuzione di un ordine.
-
+\newpage
 \subsection{JsonAccessedData}
 Questo package contiene le classi che rappresentano in memoria i file Json, ed i file Json veri e propri ad eccezzione dello storico ordini come discusso precedentemente.
 
