--- a/Relazione/Documentazione Cross.tex
+++ b/Relazione/Documentazione Cross.tex
@@ -236,7 +236,7 @@ Questo capitolo agisce da manuale per l'esecuzione del progetto, per la struttur
     \item \textbf{Apache Commons Lang3}: Libreria che fornisce utility che estendono l'API di Java e che risolvono problemi comuni come gestione di null e manipolazione di stringhe.
     \item \textbf{Apache Commons Logging}: Dipendenza di Apache Commons Lang3.
   \end{itemize}
-
+  Le dipendenze esterne sono disponibili nella cartella \textbf{libs}.
 \subsection{Esecuzione del Progetto}
 Il progetto include due componenti principali, ovvero \textbf{Client} e \textbf{Server}, che devono essere avviati separatamente.
 
